--- a/package.json
+++ b/package.json
@@ -39,15 +39,17 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "antd": "^4.5.3",
     "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-geolocated": "^3.0.1",
     "react-places-autocomplete": "^7.3.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^1.1.1"
   }
 }
