--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "dev:serve": "cross-env NODE_ENV=development SERVE=development webpack-dev-server --config ./webpack",
     "dev": "cross-env NODE_ENV=development webpack --watch --config ./webpack",
     "build": "cross-env NODE_ENV=production webpack --config ./webpack",
-    "remove-redux": "rm -rf ./node_modules && rm -rf ./package-lock.json && rm -rf ./src/redux && npm uninstall redux react-redux redux-thunk redux-devtools-extension redux-immutable-state-invariant && npm install"
+    "remove-redux": "rm -rf ./node_modules && rm -rf ./package-lock.json && rm -rf ./src/redux && npm uninstall redux react-redux redux-thunk redux-devtools-extension redux-immutable-state-invariant && npm install",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "keywords": [],
   "author": "",
@@ -40,6 +42,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-geolocated": "^3.0.1",
